[CalDAV] Free/busy request uses wrong format for the time-range
At Nextcloud we are implementing free/busy support for the calendar. While testing it with Evolution 3.30.5-1 we recognized that evolution sends the time in the wrong format.
That's the request send by Evolution
According to the RFC time-range requires iCalendar formated date-time strings in UTC, see:
https://tools.ietf.org/html/rfc4791#section-7.10.1
https://tools.ietf.org/html/rfc4791#section-9.9
which is YYYYMMDDTHHMMSSZ, not YYYY-MM-DDTHH:MM:SSZ
For reference, this is the corresponding Nextcloud ticket: https://github.com/nextcloud/server/pull/14315
Edited by Milan Crha