I#87 - [CalDAV] Free/busy request uses wrong format for the time-range

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/87